Fix header spacing

--- a/demo/overrides.css
+++ b/demo/overrides.css
@@ -122,7 +122,6 @@
   display: inline-block;
   width: 50%;
   margin-left: -5px;
-  margin-bottom: 40px;
 }
 
 .monthBeforeSpan,
